corpus/test.txt
============
Empty module
============

module my-module-name {
}

---

(yang
  (module
    module_name: (identifier)
    module_block: (block)))

========================
Module with yang-version
========================

module my-module-name {
    yang-version "1.1";
}

---

(yang
  (module
    module_name: (identifier)
    module_block: (block
      (statement (statement_keyword) (argument (string))))))

===========================
Submodule with yang-version
===========================

submodule my-module-name {
    yang-version "1.1";
}

---

(yang
  (submodule
    submodule_name: (identifier)
    submodule_block: (block
      (statement (statement_keyword) (argument (string))))))

========================================
Module with all module header statements
========================================

module my-module-name {
    yang-version "1.1";
    namespace "https://foo.bar.com/my-module-name";
    prefix my-mod;
}

---

(yang
  (module
    module_name: (identifier)
    module_block: (block
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (node_identifier))))))

=================================
Module with a bunch of statements
=================================

module my-module-name {
    yang-version "1.1";
    namespace "https://foo.bar.com/my-module-name";
    prefix mymod;

    import ietf-inet-types {
        prefix inet;
    }

    organization "Foo";
    contact "Foo post <post@foo.com>";

    revision 2019-11-16 {
        description
            "This description starts on the next line!";
        reference
            "So does this reference statement!";
    }

    identity my-identity {
        description "This is a YANG identity.";
        reference "Foobar!";
    }
}

---

(yang
  (module
    module_name: (identifier)
    module_block: (block
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (node_identifier)))
      (statement (statement_keyword) (argument (node_identifier)) (block
        (statement (statement_keyword) (argument (node_identifier)))))
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (date)) (block
        (statement (statement_keyword) (argument (string)))
        (statement (statement_keyword) (argument (string)))))
      (statement (statement_keyword) (argument (node_identifier)) (block
        (statement (statement_keyword) (argument (string)))
        (statement (statement_keyword) (argument (string))))))))

=============================
Module with augment statement
=============================

module my-module-name {
    yang-version "1.1";
    namespace "https://foo.bar.com/my-module-name";
    prefix mymod;

    augment /ncs:devices/device {
        container foo {
            leaf bar {
                type string;
                description "Foo bar.";
            }
        }
    }
}

---

(yang
  (module
    module_name: (identifier)
    module_block: (block
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (node_identifier)))
      (statement (statement_keyword) (argument (keypath)) (block
        (statement (statement_keyword) (argument (node_identifier)) (block
          (statement (statement_keyword) (argument (node_identifier)) (block
            (statement (statement_keyword) (argument (built_in_type)))
            (statement (statement_keyword) (argument (string))))))))))))

=========================================
Module with comments at various locations
=========================================

// Comment outside of the module
module my-module-name {   // Comment on the same line as the module!
    // Comment inside the module block
    yang-version "1.1";
    namespace "https://foo.bar.com/my-module-name";
    prefix mymod;   // Comment on the same line as an expression

    augment /ncs:devices/device {
        container foo {
            uses external-module:some-grouping;

            leaf bar {
                type string;
                description   // Comment between a keyword and its value!
                    "Foo bar.";
            }

            /*
            leaf invisible {
                type bool;
                description "I am entirely commented out!";
            }
            */
        }
    }
}

---

(yang
  (comment)
  (module
    module_name: (identifier)
    module_block: (block (comment)
      (comment)
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (string)))
      (statement (statement_keyword) (argument (node_identifier))) (comment)
      (statement (statement_keyword) (argument (keypath)) (block
        (statement (statement_keyword) (argument (node_identifier)) (block
          (statement (statement_keyword) (argument (node_identifier)))
          (statement (statement_keyword) (argument (node_identifier)) (block
            (statement (statement_keyword) (argument (built_in_type)))
            (statement (statement_keyword) (comment) (argument (string)))))
          (comment))))))))

==========================
Module with extension call
==========================

module my-module-name {
    augment /ncs:devices/device {
        container new-container {
            tailf:action add-device {
                tailf:actionpoint my-module-name-add-device;
                tailf:info
                    "Add a device!";
                input {
                    uses inventory-actions:device-input;
                }
                output {
                    leaf result {
                        type string;
                        description "Action result.";
                    }
                }
            }
        }
    }
}

---

(yang
  (module
    module_name: (identifier)
    module_block: (block
      (statement (statement_keyword) (argument (keypath)) (block
        (statement (statement_keyword) (argument (node_identifier)) (block
          (statement (extension_keyword) (argument (node_identifier)) (block
            (statement (extension_keyword) (argument (node_identifier)))
            (statement (extension_keyword) (argument (string)))
            (statement (statement_keyword) (block
              (statement (statement_keyword) (argument (node_identifier)))))
            (statement (statement_keyword) (block
              (statement (statement_keyword) (argument (node_identifier)) (block
                (statement (statement_keyword) (argument (built_in_type)))
                (statement (statement_keyword) (argument (string))))))))))))))))
